Make route with Yandex Maps and Apple Maps

--- a/RecycleProject/Supporting files/Info.plist
+++ b/RecycleProject/Supporting files/Info.plist
@@ -64,6 +64,7 @@
         <string>ms-outlook</string>
         <string>readdle-spark</string>
         <string>ymail</string>
+        <string>yandexmaps</string>
     </array>
 </dict>
 </plist>
